--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     />
     <!-- AOS Animation -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <title>Om Dental Clinic</title>
+    <title>Happy Dental</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
